# get-latest-spin-cli-version

./: Cargo.toml  README.md  spin.toml  spin.toml.v1_backup
.github/workflows/: deploy.yml
src/: lib.rs
