[package]
name = "get-latest-spin-cli-version"
authors = ["Thorsten Hans <thorsten.hans@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.96"
spin-sdk = "3.0.1"

[workspace]
